# sdbusExamples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  confFile
src/: dbus.h  dbusClient.c  dbusClient.h  dbusServer.c  dbusServer.h  main.c
